--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -10,14 +10,40 @@
     {
      "cell_type": "code",
      "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": [
       "import csv\n",
+      "f=open(\"cig.csv\",\"rb\")\n",
+      "r=csv.reader(f)\n",
+      "tar=[]\n",
+      "nicotine=[]\n",
+      "for row in r:\n",
+      "    a=row[0].replace(\"\\t\",\" \")\n",
+      "    b=a.split()\n",
+      "    b=b[1:]\n",
+      "    b=map(float, b)\n",
+      "    tar.append(b[0])\n",
+      "    nicotine.append(b[1])\n",
+      "f.close()\n",
+      "print tar\n",
+      "print nicotine\n",
+      "from pylab import *\n",
       "\n",
-      "f = open('cig.csv', 'rb')\n",
-      "reader = csv.reader(f)\n",
-      "for row in reader:\n",
-      " print row\n",
-      "f.close()"
+      "\n",
+      "fig = plt.figure()\n",
+      "ax = fig.add_subplot(111)\n",
+      "scatter(tar,nicotine)\n",
+      "ax.set_title('Cig')\n",
+      "ax.set_xlabel('tar')\n",
+      "ax.set_ylabel('nicotine')\n",
+      "savefig(\"cig_scatter.png\")\n"
      ],
      "language": "python",
      "metadata": {},
@@ -26,35 +52,28 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "['Alpine \\t\\t14.1  .86  .9853  13.6']\n",
-        "['Benson&Hedges\\t16.0 1.06 1.0938  16.6']\n",
-        "['BullDurham\\t29.8 2.03 1.1650  23.5']\n",
-        "['CamelLights\\t 8.0  .67  .9280  10.2']\n",
-        "['Carlton\\t\\t 4.1  .40  .9462   5.4']\n",
-        "['Chesterfield\\t15.0 1.04  .8885  15.0']\n",
-        "['GoldenLights\\t 8.8  .76 1.0267   9.0']\n",
-        "['Kent\\t\\t12.4  .95  .9225  12.3']\n",
-        "['Kool\\t\\t16.6 1.12  .9372  16.3']\n",
-        "['L&M\\t\\t14.9 1.02  .8858  15.4']\n",
-        "['LarkLights\\t13.7 1.01  .9643  13.0']\n",
-        "['Marlboro\\t15.1  .90  .9316  14.4']\n",
-        "['Merit\\t\\t 7.8  .57  .9705  10.0']\n",
-        "['MultiFilter\\t11.4  .78 1.1240  10.2']\n",
-        "['NewportLights\\t 9.0  .74  .8517   9.5']\n",
-        "['Now\\t\\t 1.0  .13  .7851   1.5']\n",
-        "['OldGold\\t\\t17.0 1.26  .9186  18.5']\n",
-        "['PallMallLight\\t12.8 1.08 1.0395  12.6']\n",
-        "['Raleigh\\t\\t15.8  .96  .9573  17.5']\n",
-        "['SalemUltra\\t 4.5  .42  .9106   4.9']\n",
-        "['Tareyton\\t14.5 1.01 1.0070  15.9']\n",
-        "['True\\t\\t 7.3  .61  .9806   8.5']\n",
-        "['ViceroyRichLight 8.6  .69  .9693  10.6']\n",
-        "['VirginiaSlims\\t15.2 1.02  .9496  13.9']\n",
-        "['WinstonLights\\t12.0 .82  1.1184  14.9']\n"
+        "[14.1, 16.0, 29.8, 8.0, 4.1, 15.0, 8.8, 12.4, 16.6, 14.9, 13.7, 15.1, 7.8, 11.4, 9.0, 1.0, 17.0, 12.8, 15.8, 4.5, 14.5, 7.3, 8.6, 15.2, 12.0]\n",
+        "[0.86, 1.06, 2.03, 0.67, 0.4, 1.04, 0.76, 0.95, 1.12, 1.02, 1.01, 0.9, 0.57, 0.78, 0.74, 0.13, 1.26, 1.08, 0.96, 0.42, 1.01, 0.61, 0.69, 1.02, 0.82]\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAYIAAAEVCAYAAADtmeJyAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XtcVHXi//HXIBcZQLwUqGDqKireENFYdU28/Vw1zZYu\nultaWUuu12o3+36/tWLrVral2c3VrmallWniBnQVc72mUlmalwoFJEpLAwfk9vn9kc1GwnJxhhk8\n7+fjwePhnPl45u15jPPmnM85Z2zGGIOIiFiWj6cDiIiIZ6kIREQsTkUgImJxKgIREYtTEYiIWJyK\nQETE4lQEInV0//33c8stt3g6hojL2HQdgUjVXn75ZRYtWsSBAwcICQmhT58+/N///R+DBg3ydDQR\nl9IegUgVFi1axG233cbdd9/NN998Q3Z2NtOnTyclJcXT0URcTnsEIr9w6tQpIiMjef7550lMTDzn\n+eTkZL744gtWrlwJwAsvvMA999zD6dOnmTNnDk8//TTPPPMMw4cPb+joIvWiPQKRX9i2bRvFxcVc\neeWVVT5vs9mcf963bx/Tp09n1apV5OXlcerUKY4dO1ZpjIi3UxGI/MKJEye46KKL8PGp+r/Hz3ei\n16xZw/jx4xk4cCB+fn7ce++9KgFpdFQEIr/QqlUrjh8/TkVFRY1jjx07RmRkpPNxYGAgrVq1cmc8\nEZdTEYj8woABAwgICGDdunU1jm3bti05OTnOx0VFRZw4ccKd8URcztfTAUS8TWhoKPfeey/Tp0/H\n19eXkSNH4ufnx7vvvktGRgZ2u905NjExkQEDBrBt2zbi4uJITk5G519IY6M9ApEq3H777SxatIgF\nCxYQFhbGJZdcwpNPPumcQP5pHqBHjx489thjTJw4kbZt2xISEkJYWBgBAQGejC9SJzp9VMSFCgsL\nadGiBYcPH6Z9+/aejiNSKy7fI8jOzmbo0KH06NGDnj178uijj54zJiMjg9DQUGJjY4mNjWXBggWu\njiHSYDZs2IDD4eD06dP8+c9/pnfv3ioBaVRcPkfg5+fH4sWL6dOnD4WFhcTFxTFy5Eiio6MrjRsy\nZIiu0pQLQkpKCpMnT8YYQ//+/Vm9erWnI4nUicuLoHXr1rRu3RqA4OBgoqOjOXbs2DlFoCNScqF4\n6qmneOqppzwdQ6Te3HrWUFZWFpmZmcTHx1dabrPZ2Lp1KzExMURERPDQQw/RvXv3c8aIiEjd1fkX\nbeMmBQUFJi4uzqxbt+6c53744Qdz+vRpY4wxqampJioq6pwxbozmUvPmzfN0hFppDDkbQ0ZjlNPV\nlNO16vPZ6ZbTR0tLS0lMTOS6665jwoQJ5zwfEhLiPBd79OjRlJaW8t1337kjioiI1MDlRWCMYerU\nqXTv3p05c+ZUOSY/P9+567Jz506MMbRs2dLVUUREpBZcPkewZcsWXnzxRXr37k1sbCwA9913H0eP\nHgUgKSmJNWvWsHTpUnx9fbHb7Y36LIuEhARPR6iVxpCzMWQE5XQ15fQ8r72gzGaz6cwiEZE6qs9n\np24xISJicSoCERGLUxGIiFicikBExOJUBCIiFqciEBGxOBWBiIjFqQhERCxORSAiYnEqAhERi1MR\niIhYnIpARMTiVAQiIhanIhARsTgVgYiIxakIREQsTkUgImJxKgIREYtTEYiIWJyKQETE4lQEIiIW\npyIQEbE4FYGIiMWpCERELE5FICJicSoCERGLUxGIiFicikBExOJUBCIiFqciEBGxOBWBiIjFqQhE\nRCxORSAiYnEqAhERi1MRiIhUY+/evUyenMTVV99Aenq6p+O4jcuLIDs7m6FDh9KjRw969uzJo48+\nWuW4WbNmERUVRUxMDJmZma6OISJyXj777DMGDBjGiy92ZM2aASQm3sxrr63xdCy3cHkR+Pn5sXjx\nYj777DO2b9/OE088wf79+yuNSU1N5fDhwxw6dIjly5czbdo0V8cQETkvTzzxFA7HTIy5C0jC4VjG\n3/72iKdjuYXLi6B169b06dMHgODgYKKjozl27FilMSkpKUyZMgWA+Ph4Tp48SX5+vqujiIjU25kz\npRhj/9mSIEpLyzyWx53cOkeQlZVFZmYm8fHxlZbn5ubSrl075+PIyEhycnLcGUVEpE6mTv0Ddvs/\ngFXAW9jt05gxY4qnY7mFr7tWXFhYyFVXXcWSJUsIDg4+53ljTKXHNpvtnDHJycnOPyckJJCQkODq\nmCIiVRo4cCDr17/EX//6EMXFZ7jlltu49dZbPB3rHBkZGWRkZJzXOmzml5/ILlBaWsrll1/O6NGj\nmTNnzjnP33rrrSQkJDBx4kQAunXrxqZNmwgPD/9PMJvtnLIQEZH/rj6fnS4/NGSMYerUqXTv3r3K\nEgAYP348L7zwAgDbt2+nefPmlUpAREQajsv3CP79739z2WWX0bt3b+fhnvvuu4+jR48CkJSUBMCM\nGTNIT08nKCiI5557jr59+1YOpj0CEZE6q89np1sODbmCikBEpO684tCQiIg0LioCERGLUxGIiFic\nikBExOJUBCIiFqciEBGxOBWBiIjFqQhERCxORSAiYnEqAhERi1MRiIhYnIpARMTiVAQiIhanIhAR\nsTgVgYiIxakIREQsTkUgImJxKgIREYtTEYiIWJyKQETE4lQEIiIWpyIQEbE4FYGIiMWpCERELE5F\nICJicSoCERGLUxGIiFicikBExOJUBCIiFqciEBGxOBWBiIjFqQhERCxORSAiYnEqAhERi1MRiIhY\nnIpARMTiXF4EN910E+Hh4fTq1avK5zMyMggNDSU2NpbY2FgWLFjg6ggiIlIHvq5e4Y033sjMmTOZ\nPHlytWOGDBlCSkqKq19aRETqweV7BIMHD6ZFixb/dYwxxtUvKyIi9eTyPYKa2Gw2tm7dSkxMDBER\nETz00EN07969yrHJycnOPyckJJCQkNAwIUVEGomMjAwyMjLOax0244Zfz7Oyshg3bhx79+4957mC\nggKaNGmC3W4nLS2N2bNnc/DgwXOD2WzacxARqaP6fHY2+FlDISEh2O12AEaPHk1paSnfffddQ8cQ\nEZGzGrwI8vPznW21c+dOjDG0bNmyoWOIiMhZLp8jmDRpEps2beL48eO0a9eO+fPnU1paCkBSUhJr\n1qxh6dKl+Pr6YrfbWb16tasjiIhIHdRqjmDz5s0cPnyYG2+8kW+//ZbCwkI6duzo3mCaIxARqbP6\nfHbWWATJycns3r2bAwcOcPDgQXJzc7nmmmvYsmXLeYWtMZiKQESkztwyWbxu3TrWr19PUFAQABER\nERQUFNQvoYiIeJ0aiyAgIAAfn/8MO336tFsDiYhIw6qxCK6++mqSkpI4efIky5cvZ/jw4dx8880N\nkU1ERBpArSaL3377bd5++20ARo0axciRI90fTHMEIiJ15pbJYk9REYiI1J1bJotff/11oqKiaNas\nGSEhIYSEhNCsWbN6hxQREe9S4x5Bp06d+Ne//kV0dHRDZQK0RyAiUh9u2SNo3bp1g5eAiIg0nBpv\nMdGvXz+uvfZaJkyYgL+/P/Bj4/zud79zezgREXG/Govg1KlTBAYGOs8a+omKQETkwqCzhkRELiD1\n+eysdo9g4cKFzJ07l5kzZ1b5Qo8++mjdE4qIiNeptgh++vrIuLg4bDabc7kxptJjERFp3KotgnHj\nxgFgt9u55pprKj336quvujeVyAXKGENy8t958sln8PHxYe7cWdx22yz9ciUeVeMcQWxsLJmZmTUu\nc3kwzRHIBWjx4ke5++4VOBwrgRLs9on88593c/3113k6mlwgXDpHkJaWRmpqKrm5ucyaNcu54oKC\nAvz8/M4vqYhFrVq1AYdjAfDjoVeH425WrdqgIhCPqrYI2rZtS1xcHOvXrycuLs65PCQkhMWLFzdI\nOJELTYsWzYAs52MfnyO0bKlbtohn1XhoqLS0lIqKCg4ePAhAt27dGmSPQIeG5EK0Z88eLrtsFMXF\nk7HZSrDbX+PDDz+gS5cuno4mFwi33H00IyODKVOm0L59ewCOHj3KihUrGDJkSP2T1iaYikAuUAcP\nHmT16ldo0qQJ1133B+f/LRFXcEsR9O3bl1WrVtG1a1fgxzfxxIkT2bNnT/2T1iaYikBEpM7cctO5\nsrIyZwkAdOnShbKysrqnExERr1TjvYbi4uK4+eabue666zDG8NJLL9GvX7+GyCYiIg2gxkNDxcXF\nPPHEE2zZsgWAwYMH86c//YmAgAD3BtOhIRGROnPLHMHp06dp2rQpTZo0AaC8vJwzZ85gt9vrn7Q2\nwVQEIiJ15pY5gmHDhlFUVOR87HA4GDFiRN3TiYiIV6pxjuDMmTMEBwc7H4eEhOBwONwaSuRCs3v3\nbnbt2sUll1zCb3/7W91bSLxKjXsEQUFB7N692/l4165dBAYGujWUyIVk6dLlXHbZOG6//UOuvvpO\nfv/7qTrsKV6lxjmCDz/8kIkTJ9KmTRsA8vLyeOWVV9x+5pDmCORCcObMGZo1a0VJyUdAZ6CIoKAY\n3nrrOQYNGuTpeHIBculN537Sv39/9u/fz4EDB7DZbHTt2lU3nROppVOnTmGzBfBjCQAE0qRJNPn5\n+Z6MJVJJtYeG3nvvPQBef/11/vWvf3Hw4EEOHDjAhg0bWLt2bYMFFDlfZWVl/OUvd9OhQ29iYgY7\n39sN4eKLLyY8PAybbQlQDmyirGyrrsURr1LtHsEHH3zA8OHD2bBhQ5UTW/ryemks7rjjf3n66Q9x\nOJ4DjjB+/CT+/e+3iI2NddtrFhYWEhQUhM1m4733NjB27LUcOnQHzZuHs2rVi1xyySVue22RuqrV\nBWWvv/46WVlZlW4tMW/ePPcG0xyBuEirVpfw3XfvAVEA2Gz/yz33+DN/frLLX+vTTz9lzJiryMs7\nQmBgMK+88gKjR48GfryTrw6riru55TqCK664gpSUFPz8/AgODnb+iDQWTZsGAt86H/v6fovdXr8z\n34wxfPzxx2RkZHDy5MlKz5WXlzNixHiys+dSVuagoOANrrpqMjk5OQAqAfFaNU4W5+bm8tZbbzVE\nFhG3uP/+u5k27Vocjtvw9T1CaOhb3HDDgjqvp6KigmuvvYG0tA/w9Y3Ex+crNm5MJSYmBvjxjLof\nfigCbjz7Nwbh59efzMxMIiMjXfcPEnGxGotg4MCBfPLJJ/Tu3bsh8oi43OTJ1xMeHsbatW/SokUI\ns2fvIDw8vM7rWb16NRs2bOHMmZuAS4B0Ro0az6ef7uaiiy6iZcuWlJcXAof58SyhAkpLP6Nt27au\n/QeJuFiNcwTR0dEcPnyYjh07Om80Z7PZ+OSTT6ocf9NNN/Hmm28SFhbG3r17qxwza9Ys0tLSsNvt\nPP/881VO2mmOQBpKYWEhjzzyKFlZxxg2bCCTJk1yniCxf/9+li17lrKyMtavf5OcnFCgK/AGMBn4\nhrCwXXz88XZat27NsmVPc/vt9+DjMwxjPuQPfxjNsmVLPPivE6txy03nsrKyqlzeoUOHKpdv3ryZ\n4OBgJk+eXGURpKam8vjjj5OamsqOHTuYPXs227dvPzeYikAaQHFxMX37DubLLztz5syvsdufYcaM\nK1i48G/s3buXAQOG4XDcijEBwEJgA7AAmAJcD4Cv72zmzLHzj3/cD8Ann3zCRx99RPv27bnssst0\nOwlpUG65oKy6D/zqDB48uNryAEhJSWHKlCkAxMfHc/LkSfLz8+u1qy5yvt566y1ycgI5c+ZlwIbD\nMYlFiy7h73+fx333PYLDcSfG/OXs6AhgMfA98J/vGC4r60J+/n/2kHv37q1DqdKo1FgErpabm0u7\ndu2cjyMjI8nJyamyCJKTk51/TkhIICEhoQESipU4HA6MuQj46bf2Fhjz46meBQUOjLn4Z6PDgFxg\nCHAn8DLwHXb7Yq688h8NG1zkrIyMDDIyMs5rHQ1eBMA5uy3V7Tr/vAhE3GHo0KE0aXI7sAz4NQEB\nDzNw4EgCAwO56aZr2LjxNhyOS4AAmja9g6AgB4WFT9Os2cWcPh1DQEBT5s27iyuvvBJjDPn5+fj5\n+dGqVSsP/8vEKn75S/L8+fPrvI4GL4KIiAiys7Odj3NycoiIiGjoGGIBeXl5ZGVl0alTJ8LCwqoc\n07p1azZvfptbbrmd3NxHGTJkIEuXvgzA7353JQUFBfz973dSXl7OzJnTmT17RpW/uPzwww/89reJ\n7NmzB2NKSUy8mpUrlzu/0EnEqxk3+Oqrr0zPnj2rfO7NN980o0ePNsYYs23bNhMfH1/lODdFE4tY\nvvwZExjY0jRr1t8EBrY0r766xq2vd8MN00xAwA0GygwUGrt9iFm8eIlbX1OkKvX57KzxrKG6mjRp\nEps2beL48eOEh4czf/58SktLAUhKSgJgxowZpKenExQUxHPPPUffvn3PWY/OGpL6ys7OpmvXWIqK\ntvHjbSUyCQwcTl7eV4SGhrrlNbt2vZSDB5cAA84ueZbExE2sWbPCLa8nUh23nDVUV6tWrapxzOOP\nP+7qlxVx+vLLL/H370ZRUdTZJbH4+oaRnZ3ttiKIiurIF1+8S3n5AMAQEPAeXbt2rvHviXgDl+8R\nuIr2CKS+cnNziYqKoajoA6A7sAO7fQx5eV/RrFkzt7zm0aNHiY8fisMRiTEFdOgQwNat7+i+XNLg\n3HJBmaeoCOR8rFz5EklJM/Hzi6SsLJfVq1cwbtzlLll3eno69977CKWlZcycOYXJk3+8sKygoIBt\n27bh7+/PwIED8ff3d8nridSFikDkZ06cOMHRo0fp2LEjzZs3d8k6N27cyNixkygqWgIEYbfP5skn\n5zFlymSXrF/kfKkIRNzs2mtv4tVX44DpZ5e8Sd++D7N79/uejCXi5JbvIxCxGofDwccff0xeXt45\nz/n7+wLFP1tShK+vR67LFHEZFYHIz+zZs4fIyCgGD/4Dv/pVD/7618rfWzBnThJ2+wPAImAZgYEz\nueeeWR7JKuIqOjQk8jORkV3JzZ0PTAS+ISgonrfeepFBgwY5x+zatYuHH15KaWkZt956PSNGjPBY\nXpFf0hyByHkoLS0lIKApxpTy086y3T6VxYvj+eMf/+jZcCK1pDkCsbSDBw8ybdpsJk9O4t13363z\n3/fz8yM8vAOQcnbJd9hsm+jatasrY4p4HRWBXBAOHTpEv36/YdmyFqxc2ZPx4yezdu3aOq/njTde\nJjR0GqGhlxIY2I1bb72WIUOGuCGxiPfQoSG5IMye/WceeywAY/5+dkkq3bv/jc8+21bndZ06dYp9\n+/YRHh7Or371K9cGFXEzr7jXkEhDKS0tpby8nKZNm1JUdAZjfv7lRqGcOVNSr/WGhoYyYMCAmgeK\nXCB0aEgaHWMMt902F7s9hODgUMaMuYprr51AYOBDwOtABkFB0/njH//g6agijYL2CMTt9u/fT15e\nHj179qz2C2Lq4tlnn2P58ncpK8sBQti48XratUth7doV3H33gzgcRUydegO33z77vF9LxAo0RyBu\nNWfOXJYvfwF//y6Ul+8nJeUVhg4del7r/P3vb2bVqv5A0tklO+jceTqHDu0677wijZ1OHxWvsnnz\nZp5+eg1FRfs4deolCgsTGTv2Co4ePXpe623fvg3+/juAH9/sNtsO2rVr64LEItakIhC3OXz4MDAI\n+BboB5RRVHQlvXpdyoEDB+q93rlz76Bdu10EBw8nOPh3hIY+wJNPPuii1CLWo0ND4ja7d+/mssvG\n43AMBOKAuwCw2R5kwoS9rF27st7rdjgcpKWlUVJSwvDhw10y9yByIdChIfEqcXFx3Hvvndhs7wFd\nnMuN6cK3335/Xuu22+0kJiYyadIklYDIedJZQ+JWs2dPp7S0hHvvXUBRUQxgw25fQGLiDZ6OJiJn\nqQjELY4cOcLYsdeyb98umjW7iHHjhpGePghjDDNm3Mrs2dNrXomINAjNEYhLfPfdd3z++edERETQ\nvn17unWL49Chq6iouBPYid0+no8+2kpUVJSno4pc0HSLCfGIjRs3Mn78Nfj4dKSk5Ev+/OdZfPHF\nPioq7gJswAB8fEawY8cOFYGIF9JksZyXiooKJkyYSGHhan74YSfFxZ/y8MPL8PHxBfafHVUCfEp4\nePh/WZOIeIqKQM7L999/T3HxGWD42SWt8fUdwNSpkwkMHIbdPpXg4HgSErozfPjw/7YqEfEQzRHI\neamoqOCiiyL5/vungTFANnZ7PFu3pmGMYceOHbRt25axY8fi46PfO0TcTXME0uB8fHzYsOE1xoxJ\nBC6mpCSH+fOTiYmJAaBPnz6eDSgiNdIegdRacXExM2f+hQ0b0ggNbcHjj9/HyJEjASgoKOCLL76g\nTZs2mgsQ8SB9eb241eTJSaxZk0dR0YPAIez2m9i27T169+7t6WgicpZuMSFutW7dWoqK/gl0A8ZR\nUjKZ1NRUT8cSkfOkIpBaCwwMBnKdj319c/H39+edd97h/fff58yZM54LJyL1pkNDUmsrVrzAn/70\nvzgcf8Lf/xCtWm3Gx8dGQUEYxpTQtm0F27e/R/PmzT0dVcSyNEcgbvf+++/z5ptv0apVc3bu3Mub\nb15CWdkDgMHf/xamTWvJI4/ouwFEPEWnj4rbDRs2jGHDhgHQt+9QyspuOvuMjZKSEXz++eueCyci\n9aI5Aqm3gQPjaNr0aaAUKMJuf57f/CbO07FEpI7cUgTp6el069aNqKgoFi5ceM7zGRkZhIaGEhsb\nS2xsLAsWLHBHDHGzhQvnM2BAIQEB4fj7t+b//b+WzJ17h6djiUgduXyOoLy8nK5du/Luu+8SERFB\n//79WbVqFdHR0c4xGRkZLFq0iJSUlOqDaY6gUTDG8M0339CkSRMuuugiT8cRsTyvuI5g586ddO7c\nmQ4dOuDn58fEiRNZv379OeP0IX9hsNlshIeHqwREGjGXF0Fubi7t2rVzPo6MjCQ3N7fSGJvNxtat\nW4mJiWHMmDHs27fP1TFERKSWXH7WkM1mq3FM3759yc7Oxm63k5aWxoQJEzh48OA545KTk51/TkhI\nICEhwYVJRUQav4yMDDIyMs5rHS6fI9i+fTvJycmkp6cDcP/99+Pj48PcuXOr/TsdO3Zk9+7dtGzZ\n8j/BNEcgIlJnXjFH0K9fPw4dOkRWVhYlJSW88sorjB8/vtKY/Px8Z9CdO3dijKlUAiIi0nBcfmjI\n19eXxx9/nFGjRlFeXs7UqVOJjo5m2bJlACQlJbFmzRqWLl2Kr68vdrud1atXuzqGiIjUkm4xISJy\nAfGKQ0PiWVu3bqVLlziaN2/D6NFXceLECU9HEhEvpz2CC8BPF3Xl5uYyZMhvKSxcCsTj57eQuLj9\nbNv2rqcjikgD0d1HLai4uJgrrpjEpk0ZlJeXYMxwyst/umK7nCZNgvjhh++w2+0ezSkiDUOHhizo\nnnv+xgcfwJkz+ZSVraS8/AhQcfbZXHx8fAgICPBkRBHxciqCRm7Llj0UF08F/IFxgA0fnxHAPOz2\noSxYsIAmTZp4NqSIeDV9H0Ej16VLB3btepfS0rGAL35+v+bSSw8wdKjhN795klGjRnk6ooh4Oc0R\nNHLffvst8fFDOX48GDCEhRWzY8f7tGrVytPRRMQDNFlsUUVFRWzZsgWbzcbAgQMJDAz0dCQR8RAV\ngYiIxemsIRERqTMVgYiIxakIREQsTkUgImJxKgIREYtTEYiIWJyKQETE4lQEIiIWpyIQEbE4FYGI\niMWpCERELE5FICJicSoCERGLUxGIiFicikBExOJUBCIiFqcicLOKigrKy8s9HUNEpFoqAjepqKhg\n9uw7CQgIIiDAznXX3UJpaamnY4mInENF4CZPPPFPnn46g7Kyo5SXf8vatUf4618XeDqWiMg5VARu\nkpa2CYdjNnAx0IyiojtJT9/k6VgiIudQEbhJu3bh+PpmOh/7+OwhIiLcg4lERKpmM3X9uvsGYrPZ\n8NJotfL111/Tt+8gfvihB9AUf/8t7NiRQVRUlKejicgFrD6fnSoCNzp58iQbNmygvLyc0aNHEx6u\nPQIRcS8VgYiIxdXns1NzBCIiFqciEBGxOBXBecrIyPB0hFppDDkbQ0ZQTldTTs9zSxGkp6fTrVs3\noqKiWLhwYZVjZs2aRVRUFDExMWRmZlY5pjFoLG+OxpCzMWQE5XQ15fQ8lxdBeXk5M2bMID09nX37\n9rFq1Sr2799faUxqaiqHDx/m0KFDLF++nGnTprk6hoiI1JLLi2Dnzp107tyZDh064Ofnx8SJE1m/\nfn2lMSkpKUyZMgWA+Ph4Tp48SX5+vqujiIhIbRgXe+2118zNN9/sfLxy5UozY8aMSmMuv/xys2XL\nFufj4cOHm127dlUaA+hHP/rRj37q8VNXvriYzWar1Tjzi/Ncf/n3fvm8iIi4h8sPDUVERJCdne18\nnJ2dTWRk5H8dk5OTQ0REhKujiIhILbi8CPr168ehQ4fIysqipKSEV155hfHjx1caM378eF544QUA\ntm/fTvPmzXX7BRERD3H5oSFfX18ef/xxRo0aRXl5OVOnTiU6Opply5YBkJSUxJgxY0hNTaVz584E\nBQXx3HPPuTqGiIjUVp1nFRrQvHnzTEREhOnTp4/p06ePSUtL83SkStLS0kzXrl1N586dzQMPPODp\nONVq37696dWrl+nTp4/p37+/p+MYY4y58cYbTVhYmOnZs6dz2YkTJ8yIESNMVFSUGTlypPn+++89\nmPBHVeX0xvfl0aNHTUJCgunevbvp0aOHWbJkiTHG+7ZpdTm9bZsWFRWZSy+91MTExJjo6Ghz1113\nGWO8b3tWl7Ou29OriyA5Odk8/PDDno5RpbKyMtOpUyfz1VdfmZKSEhMTE2P27dvn6VhV6tChgzlx\n4oSnY1TywQcfmD179lT6gP3LX/5iFi5caIwx5oEHHjBz5871VDynqnJ64/syLy/PZGZmGmOMKSgo\nMF26dDH79u3zum1aXU5v3KanT582xhhTWlpq4uPjzebNm71uexpTdc66bk+vv8WE8dKzh2pzvYQ3\n8bbtOHjwYFq0aFFp2c+vL5kyZQpvvPGGJ6JVUlVO8L7t2bp1a/r06QNAcHAw0dHR5Obmet02rS4n\neN82tdskVjvaAAAENklEQVTtAJSUlFBeXk6LFi28bntC1TmhbtvT64vgscceIyYmhqlTp3Ly5ElP\nx3HKzc2lXbt2zseRkZHON7S3sdlsjBgxgn79+vHUU095Ok618vPznScNhIeHe/VFht76vgTIysoi\nMzOT+Ph4r96mP+X89a9/DXjfNq2oqKBPnz6Eh4czdOhQevTo4ZXbs6qcULft6fEiGDlyJL169Trn\nJyUlhWnTpvHVV1/x0Ucf0aZNG+644w5Px3Wq7fUS3mDLli1kZmaSlpbGE088webNmz0dqUY2m81r\nt7E3vy8LCwtJTExkyZIlhISEVHrOm7ZpYWEhV111FUuWLCE4ONgrt6mPjw8fffQROTk5fPDBB2zc\nuLHS896yPX+ZMyMjo87b0+VnDdXVO++8U6txN998M+PGjXNzmtqrzfUS3qJNmzYAXHzxxVx55ZXs\n3LmTwYMHezjVucLDw/n6669p3bo1eXl5hIWFeTpSlX6ey5vel6WlpSQmJnL99dczYcIEwDu36U85\nr7vuOmdOb92mAKGhoYwdO5bdu3d75fb8yU85d+3aRUJCgnN5bbanx/cI/pu8vDznn9etW0evXr08\nmKay2lwv4Q0cDgcFBQUAnD59mrfffturtuPPjR8/nhUrVgCwYsUK54eEt/HG96UxhqlTp9K9e3fm\nzJnjXO5t27S6nN62TY8fP+48nFJUVMQ777xDbGys123P6nJ+/fXXzjG12p4un8J2oeuvv9706tXL\n9O7d21xxxRXm66+/9nSkSlJTU02XLl1Mp06dzH333efpOFX68ssvTUxMjImJiTE9evTwmpwTJ040\nbdq0MX5+fiYyMtI8++yz5sSJE2b48OFec2peVTmfeeYZr3xfbt682dhsNhMTE1PplEFv26ZV5UxN\nTfW6bfrJJ5+Y2NhYExMTY3r16mUefPBBY4zxuu1ZXc66bk+v/c5iERFpGF59aEhERNxPRSAiYnEq\nAhERi1MRiFTj1KlTLF261NMxRNxORSBSje+//54nn3yy1uPNj/fucmMiEfdQEYhU46677uKLL74g\nNjaW22+/nREjRhAXF0fv3r1JSUkBfrxNQteuXZkyZQq9evUiJyfHw6lF6k6nj4pU48iRI1x++eXs\n3buX8vJyHA4HISEhHD9+nAEDBjgvKOzUqRPbtm3j0ksv9XRkkXrx+C0mRLzVz39Hqqio4H/+53/Y\nvHkzPj4+HDt2jG+++QaA9u3bqwSkUVMRiNTCSy+9xPHjx9mzZw9NmjShY8eOFBcXAxAUFOThdCLn\nR3MEItUICQlx3qfp1KlThIWF0aRJEzZu3MiRI0c8nE7EdbRHIFKNVq1aMWjQIHr16kX//v35/PPP\n6d27N/369SM6Oto5zhtuRSxyPjRZLCJicTo0JCJicSoCERGLUxGIiFicikBExOJUBCIiFqciEBGx\nOBWBiIjF/X9N0r+KuKHQLAAAAABJRU5ErkJggg==\n",
+       "text": [
+        "<matplotlib.figure.Figure at 0x9f7b4ec>"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
