--- a/project/Project.ipynb
+++ b/project/Project.ipynb
@@ -61,7 +61,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['LMC', 'LMY', 'LTU', 'LUX', 'LVA', 'MAC', 'MDA', 'MDV', 'MEX', 'MLT', 'MUS', 'MYS', 'NAC', 'NLD', 'NOC', 'NOR', 'NZL', 'OEC', 'OED', 'PAN', 'PER', 'PHL', 'POL', 'PRI', 'ROU', 'RUS', 'SAS', 'SGP', 'SRB', 'SUR', 'SVK', 'SVN', 'SWE', 'TUN', 'TUR', 'UKR', 'UMC', 'URY', 'USA']\n",
+        "[26.5820314777107, 55.0244665436244, 555.0, 739.0, 459.0, 161.0, 146.0, 24.0, 276.380381960645, 679.276383168944, 166.0, 350.0, 782.684938386972, 523.326849065778, 285.124590394969, 578.0, 718.0, 627.08712756366, 563.125136279828, 126.171936750883, 68.0, 29.3519455345178, 508.0, 596.0, 230.0, 271.0, 17.3962306822512, 147.85648408052, 255.869493225963, 280.551814368723, 348.0, 566.0, 519.0, 118.377474239156, 142.0, 167.0, 89.1600747852723, 200.0, 802.0]\n"
+       ]
+      }
+     ],
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
